--- a/mmlengagementsdk/src/main/res/layout/mml_quiz_image_option_list_item.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_quiz_image_option_list_item.xml
@@ -33,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/mml_widget_title_color"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="gone"
@@ -51,7 +51,7 @@
         android:layout_marginRight="10dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@android:color/black"
+        android:textColor="@color/mml_widget_title_color"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@id/result_tv"
         app:layout_constraintLeft_toLeftOf="parent"
