--- a/mmlengagementsdk/src/main/res/layout/mml_timeline_item.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_timeline_item.xml
@@ -3,4 +3,5 @@
     android:id="@+id/widget_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="8dp" />
+    android:background="@color/mml_widget_background_color"
+    android:layout_marginTop="4dp" />
