--- a/app/src/main/res/layout/activity_list_widget.xml
+++ b/app/src/main/res/layout/activity_list_widget.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
+    tools:context=".ListWidgetActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/timeline_rv"
+        android:id="@+id/rcyl_widgets"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@color/mml_time_line_bg_color"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
