--- a/mmlengagementsdk/src/main/res/drawable/mml_cheer_meter_background_stroke_drawable.xml
+++ b/mmlengagementsdk/src/main/res/drawable/mml_cheer_meter_background_stroke_drawable.xml
@@ -9,6 +9,6 @@
         android:top="2dp" />
     <stroke
         android:width="1dp"
-        android:color="#BFBDBD" />
+        android:color="@color/mml_cheer_meter_background_stroke_color" />
 
 </shape>
