--- a/mmlengagementsdk/src/main/res/drawable/mml_image_option_background_selected_drawable.xml
+++ b/mmlengagementsdk/src/main/res/drawable/mml_image_option_background_selected_drawable.xml
@@ -5,5 +5,5 @@
     <corners android:radius="4dp" />
     <stroke
         android:width="2dp"
-        android:color="#1da1f1" />
+        android:color="@color/mml_image_option_stroke_selected_color" />
 </shape>
