--- a/mmlengagementsdk/src/main/res/drawable/mml_image_option_background_stroke_drawable.xml
+++ b/mmlengagementsdk/src/main/res/drawable/mml_image_option_background_stroke_drawable.xml
@@ -6,6 +6,6 @@
 
     <stroke
         android:width="1dp"
-        android:color="#E6E6E6" />
+        android:color="@color/mml_image_option_stroke_color" />
 
 </shape>
