--- a/mmlengagementsdk/src/main/res/drawable/mml_white_blur_background.xml
+++ b/mmlengagementsdk/src/main/res/drawable/mml_white_blur_background.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#80FFFFFF" />
+    <solid android:color="@color/mml_cheer_meter_background_color" />
 
 </shape>
