--- a/mmlengagementsdk/src/main/res/layout/mml_poll_image_list_item.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_poll_image_list_item.xml
@@ -30,7 +30,7 @@
         android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@android:color/black"
+        android:textColor="@color/mml_widget_title_color"
         android:textSize="13sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -62,7 +62,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="visible"
-        android:textColor="@android:color/black"
+        android:textColor="@color/mml_widget_title_color"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.00"
