--- a/mmlengagementsdk/src/main/res/layout/mml_quiz_text_option_list_item.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_quiz_text_option_list_item.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/mml_widget_title_color"
         android:textSize="20sp"
         android:textStyle="bold"
         android:visibility="gone"
@@ -43,7 +43,7 @@
         android:layout_margin="16dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@android:color/black"
+        android:textColor="@color/mml_widget_title_color"
         android:textSize="13sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
