--- a/mmlengagementsdk/src/main/res/values/dimens.xml
+++ b/mmlengagementsdk/src/main/res/values/dimens.xml
@@ -6,4 +6,6 @@
     <dimen name="rounded_corner_box_radius">4dp</dimen>
     <dimen name="widget_time_bar_height">4dp</dimen>
     <dimen name="timer_margin_top">16dp</dimen>
+    <dimen name="chat_avatar_height">40dp</dimen>
+    <dimen name="chat_avatar_width">40dp</dimen>
 </resources>
