--- a/mmlengagementsdk/src/main/res/layout/mml_image_slider.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_image_slider.xml
@@ -16,9 +16,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="16dp"
         android:paddingTop="32dp"
-        android:paddingRight="16dp"
         android:paddingBottom="32dp"
         android:orientation="vertical">
 
@@ -27,6 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:textColor="@color/mml_widget_title_color"
             android:textSize="15sp"
             android:textStyle="bold"
@@ -35,7 +35,7 @@
         <com.mml.mmlengagementsdk.widgets.utils.imageslider.ImageSlider
             android:id="@+id/image_slider"
             android:layout_width="match_parent"
-            android:layout_height="48dp"
+            android:layout_height="wrap_content"
             app:allow_reselection="true"
             app:register_touches_outside_thumb="true" />
 
@@ -43,6 +43,8 @@
             android:id="@+id/txt_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:layout_marginTop="@dimen/timer_margin_top"
             android:textAllCaps="true"
             android:letterSpacing="0.1"
