--- a/mmlengagementsdk/src/main/res/layout/mml_alert_widget.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_alert_widget.xml
@@ -39,7 +39,6 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
@@ -59,6 +58,8 @@
                 android:id="@+id/img_alert"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:scaleType="fitEnd"
                 android:layout_marginStart="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
