--- a/mmlengagementsdk/src/main/res/layout/mml_cheer_meter.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_cheer_meter.xml
@@ -38,14 +38,13 @@
                 tools:text="New Season All On Sale" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <FrameLayout
                     android:id="@+id/frame_cheer_team_1"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="@drawable/mml_cheer_meter_team1_btn_selector">
 
                     <ProgressBar
@@ -59,24 +58,23 @@
 
                     <ImageView
                         android:id="@+id/img_cheer_team_1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
                         android:scaleType="centerInside" />
                 </FrameLayout>
 
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/vs_anim"
-                    android:layout_width="wrap_content"
+                    android:layout_width="32dp"
                     android:layout_height="match_parent"
-                    android:layout_margin="8dp" />
+                    android:layout_marginLeft="32dp"
+                    android:layout_marginRight="32dp" />
 
                 <FrameLayout
                     android:id="@+id/frame_cheer_team_2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:background="@drawable/mml_cheer_meter_team2_btn_selector">
 
                     <ProgressBar
@@ -90,10 +88,9 @@
 
                     <ImageView
                         android:id="@+id/img_cheer_team_2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         android:layout_gravity="center"
-                        android:layout_margin="20dp"
                         android:scaleType="centerInside" />
                 </FrameLayout>
             </LinearLayout>
@@ -117,18 +114,21 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:background="@drawable/mml_white_blur_background"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="visible">
 
         <ImageView
             android:id="@+id/img_winner_team"
-            android:layout_width="85dp"
-            android:layout_height="85dp"
-            android:layout_gravity="center" />
+            android:layout_width="@dimen/cheer_meter_winner_size"
+            android:layout_height="@dimen/cheer_meter_winner_size"
+            android:layout_gravity="center"
+            android:background="@drawable/mml_cheer_meter_color_background_stroke_drawable"
+            android:padding="20dp" />
 
         <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/img_winner_anim"
-            android:layout_width="300dp"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center" />
     </FrameLayout>
 </FrameLayout>
