--- a/mmlengagementsdk/src/main/res/values/dimens.xml
+++ b/mmlengagementsdk/src/main/res/values/dimens.xml
@@ -12,5 +12,6 @@
     <dimen name="livelike_snap_live_height">32dp</dimen>
     <item name="livelike_snap_live_horizontal_bias" format="float" type="dimen">0.5</item>
     <dimen name="livelike_snap_live_margin_bottom">32dp</dimen>
+    <dimen name="cheer_meter_winner_size">110dp</dimen>
 
 </resources>
