cheermeter ui update and poll vote issue

--- a/mmlengagementsdk/src/main/res/values/colors.xml
+++ b/mmlengagementsdk/src/main/res/values/colors.xml
@@ -39,4 +39,5 @@
     <color name="mml_time_line_bg_color">#FFF</color>
     <color name="cheer_meter_winner_bg_color">#fdfdfd</color>
     <color name="cheer_meter_winner_bg_stroke_color">#e6e6e6</color>
+    <color name="mml_cheer_meter_option_background_color">#fdfdfd</color>
 </resources>
