--- a/mmlengagementsdk/src/main/res/drawable/mml_cheer_meter_background_stroke_drawable.xml
+++ b/mmlengagementsdk/src/main/res/drawable/mml_cheer_meter_background_stroke_drawable.xml
@@ -10,5 +10,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/mml_cheer_meter_background_stroke_color" />
-
+    <solid android:color="@color/mml_cheer_meter_option_background_color" />
 </shape>
