--- a/mmlengagementsdk/src/main/res/drawable/mml_cheer_meter_team1_btn_selected.xml
+++ b/mmlengagementsdk/src/main/res/drawable/mml_cheer_meter_team1_btn_selected.xml
@@ -10,5 +10,5 @@
     <stroke
         android:width="2dp"
         android:color="@color/cheer_meter_team1_bg_color" />
-
+    <solid android:color="@color/mml_cheer_meter_option_background_color" />
 </shape>
