--- a/mmlengagementsdk/src/main/res/values-night/colors.xml
+++ b/mmlengagementsdk/src/main/res/values-night/colors.xml
@@ -39,4 +39,5 @@
     <color name="mml_time_line_bg_color">#17171d</color>
     <color name="cheer_meter_winner_bg_color">#17171d</color>
     <color name="cheer_meter_winner_bg_stroke_color">#5d5f6b</color>
+    <color name="mml_cheer_meter_option_background_color">#171717</color>
 </resources>
