--- a/mmlengagementsdk/src/main/res/layout/mml_quiz_widget.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_quiz_widget.xml
@@ -2,11 +2,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <com.mml.mmlengagementsdk.widgets.utils.TimeBar
@@ -59,7 +59,7 @@
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_animation_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="200dp"
         android:layout_gravity="center"
         android:scaleType="fitCenter"
         android:visibility="gone"
