--- a/mmlengagementsdk/src/main/res/layout/mml_chat_view.xml
+++ b/mmlengagementsdk/src/main/res/layout/mml_chat_view.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:background="@color/mml_widget_background_color"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
