--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,84 +6,31 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="displayUserProfile">false
-        </item><!-- To display the gamification display in chatView -->
-        <item name="chatBubbleBackground">#FFF
-        </item><!-- to update the background of chat bubble,it can be drawable/color -->
-        <item name="chatBackground">#000
-        </item><!-- update the background of chat message box,it can be drawable/color -->
-        <item name="usernameColor">#000</item><!-- update the color of username in chat message -->
-        <item name="otherUsernameColor">#000
-        </item><!-- update the color of different username in chat message -->
-        <item name="messageColor">#5f5f5f</item><!-- update color of message in chat message -->
-        <item name="chatInputViewBackground">#FFF
-        </item><!-- update the background of ChatInput, it can be drawable/color -->
-        <item name="chatDisplayBackground">#efeff4
-        </item><!-- update the background of Chat List, it can be drawable/color  -->
-        <item name="chatViewBackground">#FFF
-        </item><!-- update the background of full ChatFull View, it can be drawable/color -->
-        <item name="chatInputTextColor">#8e8e93</item><!-- update the color of textInput -->
-        <item name="chatInputTextSize">15sp</item><!-- update the textsize of textInput -->
-        <item name="chatInputTextHintColor">#8e8e93
-        </item><!-- update the hint color of textInput -->
+<!--        <item name="displayUserProfile">false-->
+<!--        </item>&lt;!&ndash; To display the gamification display in chatView &ndash;&gt;-->
+<!--        <item name="chatBubbleBackground">#FFF-->
+<!--        </item>&lt;!&ndash; to update the background of chat bubble,it can be drawable/color &ndash;&gt;-->
+<!--        <item name="chatBackground">#000-->
+<!--        </item>&lt;!&ndash; update the background of chat message box,it can be drawable/color &ndash;&gt;-->
+<!--        <item name="usernameColor">#000</item>&lt;!&ndash; update the color of username in chat message &ndash;&gt;-->
+<!--        <item name="otherUsernameColor">#000-->
+<!--        </item>&lt;!&ndash; update the color of different username in chat message &ndash;&gt;-->
+<!--        <item name="messageColor">#5f5f5f</item>&lt;!&ndash; update color of message in chat message &ndash;&gt;-->
+<!--        <item name="chatInputViewBackground">#FFF-->
+<!--        </item>&lt;!&ndash; update the background of ChatInput, it can be drawable/color &ndash;&gt;-->
+<!--        <item name="chatDisplayBackground">#efeff4-->
+<!--        </item>&lt;!&ndash; update the background of Chat List, it can be drawable/color  &ndash;&gt;-->
+<!--        <item name="chatViewBackground">#FFF-->
+<!--        </item>&lt;!&ndash; update the background of full ChatFull View, it can be drawable/color &ndash;&gt;-->
+<!--        <item name="chatInputTextColor">#8e8e93</item>&lt;!&ndash; update the color of textInput &ndash;&gt;-->
+<!--        <item name="chatInputTextSize">15sp</item>&lt;!&ndash; update the textsize of textInput &ndash;&gt;-->
+<!--        <item name="chatInputTextHintColor">#8e8e93-->
+<!--        </item>&lt;!&ndash; update the hint color of textInput &ndash;&gt;-->
         <item name="winAnimation">@string/win_animation</item>
         <item name="loseAnimation">@string/lose_animation</item>
         <!--update the margin for chat box -->
     </style>
 
-    <style name="CustomChatTheme" parent="AppTheme">
-        <item name="displayUserProfile">false</item>
-        <!--        <item name="showMessageTime">true</item>-->
-        <item name="chatBubbleWidth">match_parent</item>
-        <item name="chatBackgroundWidth">0dp</item>
-        <item name="chatBackground">#FFF</item>
-        <item name="chatReactionMessageBackHighlightedBackground">#66502878</item>
-        <item name="usernameColor">#000</item>
-        <item name="stickerIconTintColor">#1675E7</item>
-        <item name="otherUsernameColor">#000</item>
-        <item name="messageColor">#5f5f5f</item>
-        <item name="chatInputViewBackground">#000</item>
-        <item name="chatDisplayBackground">#000</item>
-        <item name="chatViewBackground">#000</item>
-        <item name="chatInputTextColor">#8e8e93</item>
-        <item name="chatInputTextSize">15sp</item>
-        <item name="chatInputTextHintColor">#8e8e93</item>
-        <item name="chatMarginBottom">3dp</item>
-        <item name="chatMarginTop">0dp</item>
-        <item name="chatMarginLeft">0dp</item>
-        <item name="chatMarginRight">0dp</item>
-        <item name="chatReactionXPosition">120dp</item>
-        <item name="chatReactionYPosition">25dp</item>
-        <item name="chatReactionElevation">6dp</item>
-        <item name="chatReactionRadius">20dp</item>
-        <item name="chatReactionDisplayCountColor">@android:color/black</item>
-<!--        <item name="showChatAvatarLogo">true</item>-->
-        <item name="chatAvatarCircle">false</item>
-        <item name="chatAvatarHeight">36dp</item>
-        <item name="chatAvatarWidth">32dp</item>
-        <item name="chatAvatarGravity">top</item>
-        <item name="chatAvatarMarginLeft">16dp</item>
-        <item name="chatAvatarMarginRight">5dp</item>
-        <item name="chatAvatarMarginBottom">0dp</item>
-        <item name="chatAvatarMarginTop">1dp</item>
-        <item name="sendButtonHeight">38dp</item>
-        <item name="sendButtonWidth">38dp</item>
-
-        <item name="chatSendButtonPaddingLeft">2dp</item>
-        <item name="chatSendButtonPaddingRight">2dp</item>
-        <item name="chatSendButtonPaddingTop">0dp</item>
-        <item name="chatSendButtonPaddingBottom">0dp</item>
-<!--        <item name="userPicDrawable">@drawable/ic_user_pic</item>-->
-        <item name="chatBubblePaddingLeft">8dp</item>
-        <item name="chatBubblePaddingRight">8dp</item>
-        <item name="chatBubblePaddingTop">8dp</item>
-        <item name="chatBubblePaddingBottom">8dp</item>
-
-        <item name="textColor">#000</item>
-        <item name="rankValueTextColor">#000</item>
-        <item name="winAnimation">@string/win_animation</item>
-        <item name="loseAnimation">@string/lose_animation</item>
-    </style>
 
     <style name="MyMaterialTheme.Base" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="android:windowNoTitle">true</item>
